# AlgEngine

./: .gitignore  LICENSE  README.md  pyproject.toml
src/algengine/: __init__.py
src/algengine/agent/: __init__.py  chat.py  nano_banana.py  utils.py
src/algengine/data/: __init__.py  cluster.py  container.py  convertor.py  datalist.py  image.py  layer.py  mappers.py  metrics.py  patch.py
src/algengine/demoshow/: __init__.py  configs.py  registries.py  run_gradio.py
src/algengine/demoshow/app/: __init__.py  annotation.py  base.py  multi_angle.py
src/algengine/diffusion/: utils.py
src/algengine/image/: __init__.py  transform.py
src/algengine/inference/: __init__.py
src/algengine/inference/base/: __init__.py  wrapper.py
src/algengine/inference/onnxruntime/: wrapper.py
src/algengine/inference/tensorrt/: utils.py  wrapper.py
src/algengine/task/: __init__.py  parallel.py
src/algengine/utils/: __init__.py  archive.py  config.py  device.py  formatter.py  io.py  misc.py  recorder.py  registry.py  scanner.py  timer.py
src/algengine/utils/logging/: __init__.py  collector.py  debug.py  logger.py  params.py  supervisor.py
