# python -m build
# pip install -e .
[project]
name = "algengine"
version = "0.0.1"
authors = [
    { name = "Jianyao Sun", email = "jianyao.sun@foxmail.com" },
]
description = "Core Tools for Algorithm Development"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.25.1",
    "numpy",
    "opencv-python",
    "Pillow",
    "pandas",
    "click"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "torch", 
    "torchvision",
    "onnx",
    "onnxruntime", 
    "onnxruntime-gpu",
    'einops',
    'pycuda',
    "safetensors",
    "json-repair"
]


[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
datatools = "algengine.cli.commands:main"